--- a/style.css
+++ b/style.css
@@ -20,5 +20,6 @@ img {
 p {
     padding-right: 400px;
     padding-left: 400px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 
 }
