--- a/style.css
+++ b/style.css
@@ -23,3 +23,8 @@ p {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 
 }
+
+button{
+    gap: 5px;
+    margin-bottom:20px ;
+}
