--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ p {
     padding-right: 400px;
     padding-left: 400px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 20px;
 
 }
 
