--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
     padding: 50px;
+    
 }
 
 #total {
@@ -7,7 +8,7 @@ body {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    height: 100vh;
+    height: 100%;
     border: 3px solid black;
     border-radius: 20%;
 }
@@ -20,7 +21,7 @@ img {
 p {
     padding-right: 400px;
     padding-left: 400px;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 20px;
 
 }
@@ -28,4 +29,13 @@ p {
 button{
     gap: 5px;
     margin-bottom:20px ;
+}
+
+button:hover {
+    background-color: orange;
+}
+
+#total:hover {
+    box-shadow: inset 75px 0 rgba(255, 0, 0, 0.25), inset 0 75px rgba(255, 255, 0, 0.25), inset -25px -25px rgba(0, 125, 255, 0.5);
+  border-color:rgba(255,100,75,0.5);
 }
