--- a/style.css
+++ b/style.css
@@ -29,6 +29,10 @@ p {
 button{
     gap: 5px;
     margin-bottom:20px ;
+    background-color: black;
+    color: white;
+    height: 40px;
+    
 }
 
 button:hover {
@@ -38,4 +42,5 @@ button:hover {
 #total:hover {
     box-shadow: inset 75px 0 rgba(255, 0, 0, 0.25), inset 0 75px rgba(255, 255, 0, 0.25), inset -25px -25px rgba(0, 125, 255, 0.5);
   border-color:rgba(255,100,75,0.5);
+
 }
