--- a/style.css
+++ b/style.css
@@ -77,55 +77,29 @@ button:hover {
 }
 .img-container img {
     display: block;
-    width: 100%;
     height: 100%;
     object-fit: cover;
     filter: grayscale(100%);
-    transform: scale(1.6);
+  
 }
 .half-right {
     background-color: var(--dark);
     padding: 1.5rem 1rem 4rem 1rem;
     position: relative;
 }
-.half-right .online {
-    position: absolute;
-    right: 2rem;
-    color: #487098;
-    font-size: 0.65rem;
-}
-.half-right .online:after {
-    content: "";
-    display: block;
-    width: 0.4rem;
-    height: 0.4rem;
-    background-color: var(--green);
-    border-radius: 50%;
-    position: absolute;
-    top: 50%;
-    left: 120%;
-    transform: translate(-50%, -50%);
-    margin-left: 0.2rem;
-}
+
+
 .half-right .name {
     font-size: 1.7rem;
-    background: linear-gradient(#f83487, #fe8361);
-    -webkit-text-fill-color: transparent;
+    color: white;
+
+
 }
 .half-right h3 {
     color: var(--green);
     margin-top: 1rem;
 }
-.half-right button {
-    background: linear-gradient(to right, var(--green), #00d8d4);
-    font-size: 0.7rem;
-    padding: 0.4rem 1.8rem;
-    border-radius: 1.8rem;
-    position: absolute;
-    bottom: 3rem;
-    right: 2rem;
-    cursor: pointer;
-}
+
 .half-right p {
     color: #487098;
     font-size: 0.65rem;
@@ -177,4 +151,8 @@ button:hover {
     line-height: 2.5rem;
     font-size: 1rem;
     color: white;
+}
+
+.member{
+    padding: 0;
 }
